Bruk POST mot infotrygd (#6319)
* Bruk POST mot infotrygd

* Fikse test